# md2file

./: .gitignore  README.md  my-man-i-want-curried-minsky.md  regenerate.sh  setup.sh
.devin/rules/: typer-cli-config.md  typer-cli.md
.github/workflows/: build-skills.yml
examples/: README.md  convert-examples.sh
examples/01-plain/: report.md
examples/02-branded/: circeus-brand-light.json  circeus-brand-light.yaml
js/: package.json  regenerate.sh
js/src/: builders.js  inline.js  renderer.js  util.js
pandoc/: README.md  build-references.sh  build_reference.py  convert.sh  regenerate.sh
pandoc/themes/: circeus-light.yaml
perf/: README.md  bench.yaml  pyproject.toml  run.sh
perf/src/md2docx_perf/: __init__.py  cli.py  config_models.py  core.py  exceptions.py
python/: README.md  pyproject.toml  regenerate.sh
python/src/md2docx/: __init__.py  cli.py  config_models.py  core.py
python/src/md2docx/lite/: __init__.py  cli.py  config.py
python/src/md2docx/render/: builders.py  context.py  inline.py  numbering.py  oxml.py
python/tests/: conftest.py
python/tests/fixtures/: 01-minimal.md  02-lists.md
python/tests/fuzzy/: test_fuzzy.py
python/tests/integration/: test_convert.py
python/tests/lite/: test_parity.py
python/tests/unit/: test_config_models.py  test_inline.py  test_renderer.py
scripts/: build_skills.py  colors.sh  install-hooks.sh  test-skills.sh
scripts/git-hooks/: pre-commit
skills/md2docx-circeus/: SKILL.md
skills/md2docx-js/: SKILL.md
skills/md2docx-python/: SKILL.md
tests/: run.mjs  test_skills.py
(+34 files in other folders)
