[project]
name = "md2docx-perf"
version = "0.1.0"
description = "Config-driven performance harness for the md2docx implementations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "pyyaml>=6",
]

[project.scripts]
md2docx-bench = "md2docx_perf.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2docx_perf"]
