[project]
name = "md2docx"
version = "0.1.0"
description = "Convert a Markdown file into a styled Word (.docx) document (python-docx implementation)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "pyyaml>=6",
    "markdown-it-py>=3",
    "python-docx>=1.1",
]

[project.scripts]
md2docx = "md2docx.cli:cli"
md2docx-lite = "md2docx.lite.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2docx"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
